--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -802,6 +802,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -824,6 +825,7 @@ allow 44.30.4.69;
 allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
+allow 45.129.0.111;
 allow 45.132.246.245;
 allow 45.13.225.69;
 allow 45.13.225.78;
