--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -910,6 +910,7 @@ deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1503,6 +1504,7 @@ deny 2a12:a800:9:1:193:26:115:82;
 deny 2a12:a800:9:1:45:83:31:79;
 deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
+deny 2a12:c740:1::cdc5:c6e6;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
 deny 2a14:c380:280:77::a;
@@ -1533,6 +1535,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1555,6 +1558,7 @@ deny 44.30.4.69;
 deny 45.11.59.28;
 deny 45.12.3.80;
 deny 45.128.133.242;
+deny 45.129.0.111;
 deny 45.132.246.245;
 deny 45.13.225.69;
 deny 45.13.225.78;
