--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -131,6 +131,7 @@ deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -723,6 +724,7 @@ deny 2a12:a800:9:1:193:26:115:82;
 deny 2a12:a800:9:1:45:83:31:79;
 deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
+deny 2a12:c740:1::cdc5:c6e6;
 deny 2a14:1ec7:1000:a633::1;
 deny 2a14:7583:f607::;
 deny 2a14:c380:280:77::a;
