--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -294,7 +294,6 @@ allow 185.193.52.180;
 allow 185.195.71.244;
 allow 185.207.107.130;
 allow 185.207.107.216;
-allow 185.208.159.233;
 allow 185.220.100.240;
 allow 185.220.100.241;
 allow 185.220.100.242;
@@ -592,7 +591,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.69.116;
-allow 198.167.206.169;
+allow 198.167.206.182;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -869,7 +868,6 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -1155,7 +1153,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1506,6 +1503,7 @@ allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:c740:1::cdc5:c6e6;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:60::a;
 allow 2a14:c380:50:62::a;
@@ -1655,6 +1653,7 @@ allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 45.95.233.104;
+allow 46.165.193.216;
 allow 46.165.243.36;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1673,7 +1672,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1787,6 +1785,7 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.222.33;
 allow 87.120.254.132;
+allow 87.121.79.55;
 allow 88.151.192.2;
 allow 88.80.20.86;
 allow 88.80.26.2;
