--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -376,7 +376,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -727,6 +726,7 @@ allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:c740:1::cdc5:c6e6;
 allow 2a14:1ec7:1000:a633::1;
 allow 2a14:7583:f607::;
+allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:60::a;
 allow 2a14:c380:50:62::a;
