--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -77,6 +77,7 @@ allow 107.189.8.226;
 allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
+allow 108.181.69.137;
 allow 108.59.12.41;
 allow 108.61.189.136;
 allow 109.169.33.163;
@@ -909,7 +910,6 @@ allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
-allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1156,6 +1156,7 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1504,6 +1505,7 @@ allow 2a12:a800:9:1:45:88:186:89;
 allow 2a12:a800:9:1:45:88:186:92;
 allow 2a12:c740:1::cdc5:c6e6;
 allow 2a14:1ec7:1000:a633::1;
+allow 2a14:3085::4f2;
 allow 2a14:7583:f607::;
 allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
@@ -1533,7 +1535,6 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1603,6 +1604,7 @@ allow 45.142.195.40;
 allow 45.143.200.32;
 allow 45.145.93.133;
 allow 45.148.10.111;
+allow 45.15.140.245;
 allow 45.154.98.33;
 allow 45.38.20.153;
 allow 45.58.190.74;
@@ -1673,6 +1675,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1822,7 +1825,6 @@ allow 93.94.51.243;
 allow 93.95.227.37;
 allow 93.95.228.105;
 allow 93.95.228.125;
-allow 93.95.231.118;
 allow 93.95.231.14;
 allow 93.95.231.88;
 allow 93.99.104.128;
