--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -77,6 +77,7 @@ deny 107.189.8.226;
 deny 107.189.8.56;
 deny 107.189.8.65;
 deny 107.189.8.70;
+deny 108.181.69.137;
 deny 108.59.12.41;
 deny 108.61.189.136;
 deny 109.169.33.163;
@@ -909,7 +910,6 @@ deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
-deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1156,6 +1156,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1504,6 +1505,7 @@ deny 2a12:a800:9:1:45:88:186:89;
 deny 2a12:a800:9:1:45:88:186:92;
 deny 2a12:c740:1::cdc5:c6e6;
 deny 2a14:1ec7:1000:a633::1;
+deny 2a14:3085::4f2;
 deny 2a14:7583:f607::;
 deny 2a14:c380:280:77::a;
 deny 2a14:c380:50:20::a;
@@ -1533,7 +1535,6 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
-deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1603,6 +1604,7 @@ deny 45.142.195.40;
 deny 45.143.200.32;
 deny 45.145.93.133;
 deny 45.148.10.111;
+deny 45.15.140.245;
 deny 45.154.98.33;
 deny 45.38.20.153;
 deny 45.58.190.74;
@@ -1673,6 +1675,7 @@ deny 51.81.222.62;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1822,7 +1825,6 @@ deny 93.94.51.243;
 deny 93.95.227.37;
 deny 93.95.228.105;
 deny 93.95.228.125;
-deny 93.95.231.118;
 deny 93.95.231.14;
 deny 93.95.231.88;
 deny 93.99.104.128;
