--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -77,6 +77,7 @@ set_real_ip_from 107.189.8.226;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
 set_real_ip_from 107.189.8.70;
+set_real_ip_from 108.181.69.137;
 set_real_ip_from 108.59.12.41;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.169.33.163;
@@ -909,7 +910,6 @@ set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:39c1::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
-set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -1156,6 +1156,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1504,6 +1505,7 @@ set_real_ip_from 2a12:a800:9:1:45:88:186:89;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
 set_real_ip_from 2a12:c740:1::cdc5:c6e6;
 set_real_ip_from 2a14:1ec7:1000:a633::1;
+set_real_ip_from 2a14:3085::4f2;
 set_real_ip_from 2a14:7583:f607::;
 set_real_ip_from 2a14:c380:280:77::a;
 set_real_ip_from 2a14:c380:50:20::a;
@@ -1533,7 +1535,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1603,6 +1604,7 @@ set_real_ip_from 45.142.195.40;
 set_real_ip_from 45.143.200.32;
 set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
+set_real_ip_from 45.15.140.245;
 set_real_ip_from 45.154.98.33;
 set_real_ip_from 45.38.20.153;
 set_real_ip_from 45.58.190.74;
@@ -1673,6 +1675,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1822,7 +1825,6 @@ set_real_ip_from 93.94.51.243;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.105;
 set_real_ip_from 93.95.228.125;
-set_real_ip_from 93.95.231.118;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
 set_real_ip_from 93.99.104.128;
