--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -78,6 +78,7 @@ allow 107.189.8.56;
 allow 107.189.8.65;
 allow 107.189.8.70;
 allow 108.181.69.137;
+allow 108.181.69.243;
 allow 108.59.12.41;
 allow 108.61.189.136;
 allow 109.169.33.163;
@@ -122,6 +123,8 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 131.72.79.38;
+allow 13.211.203.175;
+allow 13.236.117.199;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -785,6 +788,7 @@ allow 31.184.236.104;
 allow 31.220.75.237;
 allow 31.40.204.186;
 allow 31.44.238.25;
+allow 3.27.198.47;
 allow 35.0.127.52;
 allow 37.114.50.124;
 allow 37.114.50.142;
@@ -966,6 +970,7 @@ allow 5.255.98.23;
 allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
+allow 52.62.107.28;
 allow 5.2.67.226;
 allow 5.2.72.110;
 allow 5.2.79.190;
