--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -78,6 +78,7 @@ set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
 set_real_ip_from 107.189.8.70;
 set_real_ip_from 108.181.69.137;
+set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.59.12.41;
 set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.169.33.163;
@@ -122,6 +123,8 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 131.72.79.38;
+set_real_ip_from 13.211.203.175;
+set_real_ip_from 13.236.117.199;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
@@ -785,6 +788,7 @@ set_real_ip_from 31.184.236.104;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.40.204.186;
 set_real_ip_from 31.44.238.25;
+set_real_ip_from 3.27.198.47;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
 set_real_ip_from 37.114.50.142;
@@ -966,6 +970,7 @@ set_real_ip_from 5.255.98.23;
 set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
+set_real_ip_from 52.62.107.28;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.190;
