--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -851,6 +851,7 @@ allow 23.137.254.244;
 allow 23.137.255.131;
 allow 23.137.255.85;
 allow 23.151.8.8;
+allow 23.155.8.104;
 allow 23.177.185.98;
 allow 23.184.48.78;
 allow 23.190.216.8;
@@ -875,9 +876,11 @@ allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
+allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -908,11 +911,13 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
+allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:39c1::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1540,6 +1545,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1855,5 +1861,6 @@ allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
+allow 96.8.119.172;
 allow 97.90.239.170;
 allow 98.128.173.33;
