--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -851,6 +851,7 @@ deny 23.137.254.244;
 deny 23.137.255.131;
 deny 23.137.255.85;
 deny 23.151.8.8;
+deny 23.155.8.104;
 deny 23.177.185.98;
 deny 23.184.48.78;
 deny 23.190.216.8;
@@ -875,9 +876,11 @@ deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
+deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
+deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
@@ -908,11 +911,13 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
+deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:39c1::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1540,6 +1545,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
@@ -1855,5 +1861,6 @@ deny 95.143.193.125;
 deny 95.168.173.143;
 deny 95.211.174.137;
 deny 95.211.244.28;
+deny 96.8.119.172;
 deny 97.90.239.170;
 deny 98.128.173.33;
