--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -579,6 +579,7 @@ set_real_ip_from 194.42.196.42;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.55.165.11;
 set_real_ip_from 194.55.167.14;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.246.231.197;
@@ -862,6 +863,7 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
+set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -869,6 +871,15 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
+set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.29;
+set_real_ip_from 23.191.200.3;
+set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.31;
+set_real_ip_from 23.191.200.4;
+set_real_ip_from 23.191.200.5;
+set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1151,6 +1162,7 @@ set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1425,6 +1437,7 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
+set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:133;
@@ -1673,6 +1686,7 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
